Fixed Bug Where Content was Off Screen
Fixed the webpages to make sure that all of the content fit into its own section instead of overflowing into next section.

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -64,7 +64,7 @@ h1 {
 }
 
 #welcome-section {
-    height: 100vh;
+    height: 110vh;
     width: 100%;
 }
 
@@ -78,7 +78,7 @@ h1 {
 }
 
 #about-page {
-    height: 100vh;
+    height: 110vh;
     width: 100%;
 }
 
@@ -118,7 +118,7 @@ h1 {
 }
 
 #get-coursiquity {
-    height: 100vh;
+    height: 110vh;
     width: 100%;
 }
 
@@ -141,7 +141,7 @@ h1 {
 
 #test-app {
     width: 100%;
-    height: 100vh;
+    height: max-content;
 }
 
 #test-app iframe {
